[gd_scene load_steps=13 format=3 uid="uid://ctu0rwgrtkssy"]

[ext_resource type="Script" path="res://Scene/code/load.gd" id="1_4mph8"]
[ext_resource type="PackedScene" uid="uid://cfjarcdgtw0y2" path="res://Scene/Keyboard/keyboard_labels.tscn" id="1_hjrir"]
[ext_resource type="PackedScene" uid="uid://c7i0khcn701mf" path="res://Scene/Keyboard/keyboard.tscn" id="2_hc5dn"]
[ext_resource type="PackedScene" uid="uid://chysveseycbbv" path="res://Scene/PianoRoll/piano_roll.tscn" id="3_f1vsr"]
[ext_resource type="PackedScene" uid="uid://cde153arx35rx" path="res://Scene/Circle/circle.tscn" id="4_4yjvb"]
[ext_resource type="Script" path="res://Scene/code/scroll_bar.gd" id="4_rmpr4"]
[ext_resource type="Script" path="res://addons/midi/MidiPlayer.gd" id="6_1lrrr"]
[ext_resource type="Script" path="res://Scene/code/play.gd" id="6_fxyky"]
[ext_resource type="Script" path="res://Scene/code/time_line.gd" id="7_s0kcy"]
[ext_resource type="Script" path="res://Scene/code/channel_track_code.gd" id="8_8c5fx"]
[ext_resource type="Script" path="res://Scene/code/ghost_notes.gd" id="9_s8874"]
[ext_resource type="Script" path="res://Scene/code/zoom.gd" id="11_qs16l"]

[node name="Root" type="Node2D"]

[node name="KeyboardGUI" type="SubViewportContainer" parent="."]
offset_left = 52.0
offset_top = 121.0
offset_right = 1093.0
offset_bottom = 621.0
stretch = true
metadata/_edit_lock_ = true

[node name="SubViewport" type="SubViewport" parent="KeyboardGUI"]
handle_input_locally = false
size = Vector2i(1041, 500)
render_target_update_mode = 4

[node name="Notes" type="SubViewportContainer" parent="KeyboardGUI/SubViewport"]
offset_top = 100.0
offset_right = 800.0
offset_bottom = 650.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="KeyboardGUI/SubViewport/Notes"]
handle_input_locally = false
size = Vector2i(800, 550)
render_target_update_mode = 4

[node name="PianoRoll" parent="KeyboardGUI/SubViewport/Notes/SubViewport" instance=ExtResource("3_f1vsr")]
unique_name_in_owner = true
position = Vector2(20, 0)
zoom = 20

[node name="KeyboardLabels" parent="KeyboardGUI/SubViewport" instance=ExtResource("1_hjrir")]
unique_name_in_owner = true
position = Vector2(20, 40)
KeyboardLabel = ExtResource("2_hc5dn")
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LOADDialog" type="FileDialog" parent="CanvasLayer"]
unique_name_in_owner = true
title = "Open a File"
initial_position = 1
size = Vector2i(800, 550)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
filters = PackedStringArray("*.mid")

[node name="LOADSF2Dialog" type="FileDialog" parent="CanvasLayer"]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Open a File"
initial_position = 1
size = Vector2i(800, 550)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
filters = PackedStringArray("*.sf2")

[node name="LOAD" type="Button" parent="CanvasLayer"]
offset_left = 22.0
offset_top = 17.0
offset_right = 136.0
offset_bottom = 55.0
text = "LOAD MIDI"

[node name="LOADSF2" type="Button" parent="CanvasLayer"]
offset_left = 24.0
offset_top = 63.0
offset_right = 138.0
offset_bottom = 101.0
text = "LOAD SF2"

[node name="PLAY" type="Button" parent="CanvasLayer"]
offset_left = 155.0
offset_top = 18.0
offset_right = 223.0
offset_bottom = 54.0
text = "PLAY"

[node name="STOP" type="Button" parent="CanvasLayer"]
offset_left = 227.0
offset_top = 19.0
offset_right = 295.0
offset_bottom = 55.0
text = "STOP"

[node name="PAUSE" type="Button" parent="CanvasLayer"]
offset_left = 298.0
offset_top = 19.0
offset_right = 379.0
offset_bottom = 55.0
text = "PAUSE"

[node name="TrackVertical" type="VScrollBar" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 690.0
offset_top = 144.0
offset_right = 716.0
offset_bottom = 587.0
allow_greater = true
allow_lesser = true
custom_step = 100.0

[node name="UpdateTimeline" type="CheckButton" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 394.0
offset_top = 11.0
offset_right = 509.0
offset_bottom = 65.0
text = "Update 
Timeline"

[node name="SwitchMode" type="CheckButton" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 511.0
offset_top = 10.0
offset_right = 610.0
offset_bottom = 64.0
text = "Switch
Mode"

[node name="InteractiveMode" type="CheckButton" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 618.0
offset_top = 7.0
offset_right = 750.0
offset_bottom = 84.0
text = "Interactive
Ghost
 Chords"

[node name="Channels" type="Node2D" parent="CanvasLayer"]
position = Vector2(753, 72)

[node name="CHANNELS" type="VBoxContainer" parent="CanvasLayer/Channels"]
unique_name_in_owner = true
offset_right = 167.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Channels/CHANNELS"]
layout_mode = 2

[node name="ChannelName" type="Label" parent="CanvasLayer/Channels/CHANNELS/HBoxContainer"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="ChannelTracks" type="ItemList" parent="CanvasLayer/Channels"]
unique_name_in_owner = true
offset_left = 1.0
offset_top = 31.0
offset_right = 70.0
offset_bottom = 332.0

[node name="TrackName" type="ItemList" parent="CanvasLayer/Channels"]
unique_name_in_owner = true
offset_left = 79.0
offset_top = 29.0
offset_right = 373.0
offset_bottom = 330.0

[node name="Label" type="Label" parent="CanvasLayer/Channels"]
offset_left = 1.0
offset_right = 77.0
offset_bottom = 23.0
text = "CHANNEL"

[node name="Label2" type="Label" parent="CanvasLayer/Channels"]
offset_left = 120.0
offset_right = 196.0
offset_bottom = 23.0
text = "TRACKS"

[node name="INFO" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 756.0
offset_top = 425.0
offset_right = 967.0
offset_bottom = 573.0
text = "Hide        (E)
Show       (W)
Show All  (R)
Hide All   (T)
SWITCH MODE  (Q)
Interactive Mode (Y)"

[node name="ChordType" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 772.0
offset_top = 30.0
offset_right = 996.0
offset_bottom = 62.0
text = "MAJOR CHORDS SELECTED"

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 396.0
offset_top = 146.0
offset_right = 443.0
offset_bottom = 169.0
text = "Chord"

[node name="CURRENTCHORD" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 368.0
offset_top = 183.0
offset_right = 479.0
offset_bottom = 206.0
text = "Current Chord"

[node name="LOG" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 166.0
offset_top = 72.0
offset_right = 295.0
offset_bottom = 95.0
theme_override_colors/font_color = Color(1, 0.187882, 0.138684, 1)
theme_override_colors/font_outline_color = Color(0.516786, 0, 0.0444829, 1)
theme_override_constants/outline_size = 3
text = "NO FILE LOADED"

[node name="Circle" parent="CanvasLayer" instance=ExtResource("4_4yjvb")]
unique_name_in_owner = true
position = Vector2(555, 516)
scale = Vector2(0.15, 0.15)

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 932.0
offset_top = 428.0
offset_right = 1130.0
offset_bottom = 588.0
text = "To show a manual chord.
Press Z to M to S to J (white notes)
Press Â° to 1 to 6 for chord types.

"

[node name="CODE" type="Node" parent="."]

[node name="Load" type="Node" parent="CODE"]
unique_name_in_owner = true
script = ExtResource("1_4mph8")
zoom = 10
chord_min_time = 50

[node name="ScrollBar" type="Node" parent="CODE"]
script = ExtResource("4_rmpr4")

[node name="Play" type="Node" parent="CODE"]
script = ExtResource("6_fxyky")

[node name="TimeLine" type="Node" parent="CODE"]
script = ExtResource("7_s0kcy")

[node name="ChannelTrackCode" type="Node" parent="CODE"]
script = ExtResource("8_8c5fx")

[node name="GhostNotes" type="Node" parent="CODE"]
script = ExtResource("9_s8874")
chord_type = 1

[node name="Zoom" type="Node" parent="CODE"]
script = ExtResource("11_qs16l")

[node name="MidiPlayer" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_1lrrr")

[node name="Root" type="ColorRect" parent="."]
unique_name_in_owner = true
offset_left = 757.0
offset_top = 579.0
offset_right = 784.0
offset_bottom = 625.0

[node name="Fifth" type="ColorRect" parent="."]
unique_name_in_owner = true
offset_left = 861.0
offset_top = 582.0
offset_right = 888.0
offset_bottom = 628.0

[node name="Other" type="ColorRect" parent="."]
unique_name_in_owner = true
offset_left = 971.0
offset_top = 584.0
offset_right = 998.0
offset_bottom = 630.0

[node name="Label" type="Label" parent="."]
offset_left = 799.0
offset_top = 587.0
offset_right = 839.0
offset_bottom = 610.0
text = "root"

[node name="Label2" type="Label" parent="."]
offset_left = 905.0
offset_top = 587.0
offset_right = 945.0
offset_bottom = 610.0
text = "fifth"

[node name="Label3" type="Label" parent="."]
offset_left = 1019.0
offset_top = 591.0
offset_right = 1059.0
offset_bottom = 614.0
text = "Other"

[connection signal="file_selected" from="CanvasLayer/LOADDialog" to="CODE/Load" method="_on_load_dialog_file_selected"]
[connection signal="file_selected" from="CanvasLayer/LOADSF2Dialog" to="CODE/Load" method="_on_loadsf_2_dialog_file_selected"]
[connection signal="pressed" from="CanvasLayer/LOAD" to="CODE/Load" method="_on_load_pressed"]
[connection signal="pressed" from="CanvasLayer/LOADSF2" to="CODE/Load" method="_on_loadsf_2_pressed"]
[connection signal="pressed" from="CanvasLayer/PLAY" to="CODE/Play" method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/STOP" to="CODE/Play" method="_on_stop_pressed"]
[connection signal="pressed" from="CanvasLayer/PAUSE" to="CODE/Play" method="_on_pause_pressed"]
[connection signal="value_changed" from="CanvasLayer/TrackVertical" to="CODE/ScrollBar" method="_on_track_vertical_value_changed"]
[connection signal="pressed" from="CanvasLayer/SwitchMode" to="CODE/ChannelTrackCode" method="_on_switch_mode_pressed"]
[connection signal="pressed" from="CanvasLayer/InteractiveMode" to="CODE/ChannelTrackCode" method="_on_interactive_mode_pressed"]
[connection signal="item_selected" from="CanvasLayer/Channels/ChannelTracks" to="CODE/ChannelTrackCode" method="_on_channel_tracks_item_selected"]
[connection signal="midi_event" from="MidiPlayer" to="CODE/Load" method="_on_midi_player_midi_event"]
